crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__snapcaster_mage_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 5,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Flash"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "category": "Unknown",
            "fragment": "Flash",
            "description": "Flash"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 6,
          "end_byte": 234,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ enters, target instant or sorcery card in your graveyard gains flashback until end of turn. The flashback cost is equal to its mana cost. (You may cast that card from your graveyard for its flashback cost. Then exile it.)"
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "ChangesZone",
            "partial_def": {
              "mode": "ChangesZone",
              "execute": null,
              "valid_card": {
                "type": "SelfRef"
              },
              "origin": null,
              "destination": "Battlefield",
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 82,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "target instant or sorcery card in your graveyard gains flashback until end of turn"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "GenericEffect",
                        "static_abilities": [
                          {
                            "mode": "Continuous",
                            "affected": {
                              "type": "ParentTarget"
                            },
                            "modifications": [
                              {
                                "type": "AddKeyword",
                                "keyword": {
                                  "Flashback": {
                                    "type": "Mana",
                                    "data": {
                                      "type": "SelfManaCost"
                                    }
                                  }
                                }
                              }
                            ],
                            "condition": null,
                            "affected_zone": null,
                            "effect_zone": null,
                            "active_zones": [],
                            "characteristic_defining": false,
                            "description": "gain flashback"
                          }
                        ],
                        "duration": "UntilEndOfTurn",
                        "target": {
                          "type": "Or",
                          "filters": [
                            {
                              "type": "Typed",
                              "type_filters": [
                                "Instant"
                              ],
                              "controller": "You",
                              "properties": [
                                {
                                  "type": "InZone",
                                  "zone": "Graveyard"
                                }
                              ]
                            },
                            {
                              "type": "Typed",
                              "type_filters": [
                                "Sorcery"
                              ],
                              "controller": "You",
                              "properties": [
                                {
                                  "type": "InZone",
                                  "zone": "Graveyard"
                                }
                              ]
                            }
                          ]
                        }
                      },
                      "duration": "UntilEndOfTurn",
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": "Sentence",
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  },
                  {
                    "id": 1,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 2
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 84,
                        "end_byte": 128,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 1
                      },
                      "fragment": "The flashback cost is equal to its mana cost"
                    },
                    "disposition": {
                      "Continue": {
                        "continuation": "SelfCostKeywordCostClarification"
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Unimplemented",
                        "name": "unparsed_quantity",
                        "description": "The flashback cost is equal to its mana cost"
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "SelfRef"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "target instant or sorcery card in your graveyard gains flashback until end of turn. the flashback cost is equal to its mana cost.",
              "relative_player_scope": null
            },
            "source_text": "When ~ enters, target instant or sorcery card in your graveyard gains flashback until end of turn. The flashback cost is equal to its mana cost.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "Flash\nWhen this creature enters, target instant or sorcery card in your graveyard gains flashback until end of turn. The flashback cost is equal to its mana cost. (You may cast that card from your graveyard for its flashback cost. Then exile it.)",
  "card_name": "Snapcaster Mage"
}
