crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__sorcerer_class_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 55,
          "end_byte": 109,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ enters, draw two cards, then discard two cards."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "ChangesZone",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "Draw",
              "count": {
                "type": "Fixed",
                "value": 2
              },
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "Discard",
                "count": {
                  "type": "Fixed",
                  "value": 2
                },
                "target": {
                  "type": "Controller"
                }
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": null,
          "destination": "Battlefield",
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "When ~ enters, draw two cards, then discard two cards.",
          "constraint": null,
          "condition": null,
          "batched": false
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 110,
          "end_byte": 125,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{U}{R}: Level 2"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 2
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Blue",
                "Red"
              ],
              "generic": 0
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{U}{R}: Level 2",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 1
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 3,
          "last_line": 3,
          "start_byte": 126,
          "end_byte": 258,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Creatures you control have \"{T}: Add {U} or {R}. Spend this mana only to cast an instant or sorcery spell or to gain a Class level.\""
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": "You",
              "properties": []
            },
            "modifications": [
              {
                "type": "GrantAbility",
                "definition": {
                  "kind": "Activated",
                  "effect": {
                    "type": "Mana",
                    "produced": {
                      "type": "AnyOneColor",
                      "count": {
                        "type": "Fixed",
                        "value": 1
                      },
                      "color_options": [
                        "Blue",
                        "Red"
                      ]
                    }
                  },
                  "cost": {
                    "type": "Tap"
                  },
                  "sub_ability": {
                    "kind": "Spell",
                    "effect": {
                      "type": "Unimplemented",
                      "name": "unparsed_verb_arguments",
                      "description": "Spend this mana only to cast an instant or sorcery spell or to gain a Class level"
                    },
                    "cost": null,
                    "sub_ability": null,
                    "duration": null,
                    "description": null,
                    "target_prompt": null,
                    "condition": null,
                    "optional_targeting": false,
                    "optional": false,
                    "forward_result": false,
                    "sub_link": "SequentialSibling"
                  },
                  "duration": null,
                  "description": "{T}: Add {U} or {R}. Spend this mana only to cast an instant or sorcery spell or to gain a Class level.",
                  "target_prompt": null,
                  "condition": null,
                  "optional_targeting": false,
                  "optional": false,
                  "forward_result": false,
                  "is_mana_ability": true
                }
              }
            ],
            "condition": {
              "type": "ClassLevelGE",
              "level": 2
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Creatures you control have \"{T}: Add {U} or {R}. Spend this mana only to cast an instant or sorcery spell or to gain a Class level.\""
          },
          "source_text": "Creatures you control have \"{T}: Add {U} or {R}. Spend this mana only to cast an instant or sorcery spell or to gain a Class level.\"",
          "body_ir": null
        }
      }
    },
    {
      "id": 3,
      "source": {
        "id": {
          "item": 3,
          "ordinal": 0
        },
        "span": {
          "first_line": 4,
          "last_line": 4,
          "start_byte": 259,
          "end_byte": 277,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{3}{U}{R}: Level 3"
      },
      "node": {
        "PreLoweredSpell": {
          "kind": "Activated",
          "effect": {
            "type": "SetClassLevel",
            "level": 3
          },
          "cost": {
            "type": "Mana",
            "cost": {
              "type": "Cost",
              "shards": [
                "Blue",
                "Red"
              ],
              "generic": 3
            }
          },
          "sub_ability": null,
          "duration": null,
          "description": "{3}{U}{R}: Level 3",
          "target_prompt": null,
          "activation_restrictions": [
            {
              "type": "AsSorcery"
            },
            {
              "type": "ClassLevelIs",
              "data": {
                "level": 2
              }
            }
          ],
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        }
      }
    },
    {
      "id": 4,
      "source": {
        "id": {
          "item": 4,
          "ordinal": 0
        },
        "span": {
          "first_line": 5,
          "last_line": 5,
          "start_byte": 278,
          "end_byte": 438,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever you cast an instant or sorcery spell, that spell deals damage to each opponent equal to the number of instant and sorcery spells you've cast this turn."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "SpellCast",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "DamageEachPlayer",
              "amount": {
                "type": "Ref",
                "qty": {
                  "type": "SpellsCastThisTurn",
                  "scope": "Controller",
                  "filter": {
                    "type": "Or",
                    "filters": [
                      {
                        "type": "Typed",
                        "type_filters": [
                          "Instant"
                        ],
                        "controller": null,
                        "properties": []
                      },
                      {
                        "type": "Typed",
                        "type_filters": [
                          "Sorcery"
                        ],
                        "controller": null,
                        "properties": []
                      }
                    ]
                  }
                }
              },
              "player_filter": {
                "type": "Opponent"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": "UntilEndOfTurn",
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "Or",
            "filters": [
              {
                "type": "Typed",
                "type_filters": [
                  "Instant"
                ],
                "controller": null,
                "properties": []
              },
              {
                "type": "Typed",
                "type_filters": [
                  "Sorcery"
                ],
                "controller": null,
                "properties": []
              }
            ]
          },
          "origin": null,
          "destination": null,
          "trigger_zones": [
            "Battlefield"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": {
            "type": "Controller"
          },
          "valid_source": null,
          "description": "Whenever you cast an instant or sorcery spell, that spell deals damage to each opponent equal to the number of instant and sorcery spells you've cast this turn.",
          "constraint": null,
          "condition": {
            "type": "ClassLevelGE",
            "level": 3
          },
          "batched": false
        }
      }
    }
  ],
  "source_text": "(Gain the next level as a sorcery to add its ability.)\nWhen this Class enters, draw two cards, then discard two cards.\n{U}{R}: Level 2\nCreatures you control have \"{T}: Add {U} or {R}. Spend this mana only to cast an instant or sorcery spell or to gain a Class level.\"\n{3}{U}{R}: Level 3\nWhenever you cast an instant or sorcery spell, that spell deals damage to each opponent equal to the number of instant and sorcery spells you've cast this turn.",
  "card_name": "Sorcerer Class"
}
